EI611-CF.template.yaml
AWSTemplateFormatVersion: 2010-09-09
Metadata:
  'AWS::CloudFormation::Designer':
    16835601-a199-4d4a-85ba-b18e6cceaa39:
      size:
        width: 560
        height: 680
      position:
        x: -520
        'y': -230
      z: 0
      embeds:
        - f7941d35-f790-418d-bd23-f77e7f972c6d
        - d927e807-44dc-4671-bd51-148f385ffef1
        - b6fe529c-a907-4d4b-bc5a-7c2c0084ca4d
        - 9d41dd85-de4c-4a8a-9ae4-3af5d1612e78
        - 29ada4b5-4f54-44e3-a0b2-933f7bf04048
        - 08e664f3-26a4-4c0e-a135-5864a00d0741
        - 9d05a48b-4143-490d-afdf-809526ac15b5
        - e6ab444a-8611-4966-8a93-568265fa4d15
        - 6810f928-0f73-4ba1-9d35-d37b5707a767
        - 5c76658f-4ded-4521-8ecb-9e861a2986a7
    9d05a48b-4143-490d-afdf-809526ac15b5:
      size:
        width: 140
        height: 140
      position:
        x: -500
        'y': -70
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds:
        - 2050db38-51ea-4926-b987-acd90d83c453
    08e664f3-26a4-4c0e-a135-5864a00d0741:
      size:
        width: 140
        height: 140
      position:
        x: -330
        'y': -70
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds:
        - 874e1463-a392-4a8a-a37b-eb625b12591b
    29ada4b5-4f54-44e3-a0b2-933f7bf04048:
      size:
        width: 140
        height: 120
      position:
        x: -500
        'y': -200
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds:
        - 6688ca28-56cf-40f5-ba16-209952337fe9
    9d41dd85-de4c-4a8a-9ae4-3af5d1612e78:
      size:
        width: 140
        height: 120
      position:
        x: -330
        'y': -203
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds:
        - faba0cc1-95f2-4c0d-9085-d5a6c839f72c
    6688ca28-56cf-40f5-ba16-209952337fe9:
      size:
        width: 60
        height: 60
      position:
        x: -460
        'y': -170
      z: 2
      parent: 29ada4b5-4f54-44e3-a0b2-933f7bf04048
      embeds: []
      references:
        - 092a4af4-51d8-4f86-a34f-b541da00cc2d
    faba0cc1-95f2-4c0d-9085-d5a6c839f72c:
      size:
        width: 60
        height: 60
      position:
        x: -290
        'y': -170
      z: 2
      parent: 9d41dd85-de4c-4a8a-9ae4-3af5d1612e78
      embeds: []
      references:
        - 092a4af4-51d8-4f86-a34f-b541da00cc2d
    092a4af4-51d8-4f86-a34f-b541da00cc2d:
      size:
        width: 60
        height: 60
      position:
        x: -650
        'y': -60
      z: 0
      embeds: []
    22a8e504-0f78-4810-84b7-09389d5e06a2:
      source:
        id: 092a4af4-51d8-4f86-a34f-b541da00cc2d
      target:
        id: 16835601-a199-4d4a-85ba-b18e6cceaa39
      z: 0
    ce0b5a6a-9916-4f56-b9ee-c04a0cd2f01c:
      source:
        id: 6688ca28-56cf-40f5-ba16-209952337fe9
      target:
        id: 092a4af4-51d8-4f86-a34f-b541da00cc2d
      z: 3
    a0d3b12b-dbb0-405c-80b5-1dda2f1365be:
      source:
        id: faba0cc1-95f2-4c0d-9085-d5a6c839f72c
      target:
        id: 092a4af4-51d8-4f86-a34f-b541da00cc2d
      z: 4
    d927e807-44dc-4671-bd51-148f385ffef1:
      size:
        width: 60
        height: 60
      position:
        x: -380
        'y': 150
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds: []
    5c76658f-4ded-4521-8ecb-9e861a2986a7:
      size:
        width: 60
        height: 60
      position:
        x: -110
        'y': 60
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds: []
      isconnectedto:
        - 6810f928-0f73-4ba1-9d35-d37b5707a767
      isassociatedwith:
        - b6fe529c-a907-4d4b-bc5a-7c2c0084ca4d
    b6fe529c-a907-4d4b-bc5a-7c2c0084ca4d:
      size:
        width: 60
        height: 60
      position:
        x: -110
        'y': 200
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds: []
      ismemberof:
        - d927e807-44dc-4671-bd51-148f385ffef1
    6810f928-0f73-4ba1-9d35-d37b5707a767:
      size:
        width: 60
        height: 60
      position:
        x: -380
        'y': 380
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds: []
      isconnectedto:
        - 08e664f3-26a4-4c0e-a135-5864a00d0741
        - 9d05a48b-4143-490d-afdf-809526ac15b5
      ismemberof:
        - d927e807-44dc-4671-bd51-148f385ffef1
    2050db38-51ea-4926-b987-acd90d83c453:
      size:
        width: 60
        height: 60
      position:
        x: -460
        'y': -30
      z: 2
      parent: 9d05a48b-4143-490d-afdf-809526ac15b5
      embeds: []
      ismemberof:
        - d927e807-44dc-4671-bd51-148f385ffef1
      references:
        - f7941d35-f790-418d-bd23-f77e7f972c6d
    874e1463-a392-4a8a-a37b-eb625b12591b:
      size:
        width: 60
        height: 60
      position:
        x: -290
        'y': -30
      z: 2
      parent: 08e664f3-26a4-4c0e-a135-5864a00d0741
      embeds: []
      ismemberof:
        - d927e807-44dc-4671-bd51-148f385ffef1
      references:
        - f7941d35-f790-418d-bd23-f77e7f972c6d
    f7941d35-f790-418d-bd23-f77e7f972c6d:
      size:
        width: 60
        height: 60
      position:
        x: -380
        'y': 80
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds: []
    c65ef213-f5f2-4f45-b6ce-95ab5817a8e9:
      source:
        id: 2050db38-51ea-4926-b987-acd90d83c453
      target:
        id: f7941d35-f790-418d-bd23-f77e7f972c6d
      z: 5
    aca26193-a067-486c-899b-7478cb7fb132:
      source:
        id: 874e1463-a392-4a8a-a37b-eb625b12591b
      target:
        id: f7941d35-f790-418d-bd23-f77e7f972c6d
      z: 6
    fc3e58b4-e16d-4a0c-95e4-54dcb280b4ce:
      source:
        id: 874e1463-a392-4a8a-a37b-eb625b12591b
      target:
        id: d927e807-44dc-4671-bd51-148f385ffef1
      z: 7
    2d6620db-5008-467a-8883-703d5fbf7744:
      source:
        id: 2050db38-51ea-4926-b987-acd90d83c453
      target:
        id: d927e807-44dc-4671-bd51-148f385ffef1
      z: 8
    7fe38410-f5f6-4252-8b42-9cad49362258:
      size:
        width: 60
        height: 60
      position:
        x: 166.70513033619997
        'y': -158.5751802297032
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
    e6ab444a-8611-4966-8a93-568265fa4d15:
      size:
        width: 120
        height: 120
      position:
        x: -410
        'y': 250
      z: 1
      parent: 16835601-a199-4d4a-85ba-b18e6cceaa39
      embeds:
        - 40ec7ece-424b-4718-ab04-f346e6d7f659
      isconnectedto:
        - 9d05a48b-4143-490d-afdf-809526ac15b5
        - 08e664f3-26a4-4c0e-a135-5864a00d0741
    40ec7ece-424b-4718-ab04-f346e6d7f659:
      size:
        width: 60
        height: 60
      position:
        x: -380
        'y': 280
      z: 2
      parent: e6ab444a-8611-4966-8a93-568265fa4d15
      embeds: []
      ismemberof:
        - 7fe38410-f5f6-4252-8b42-9cad49362258
        - d927e807-44dc-4671-bd51-148f385ffef1
    1a25485e-2ef4-4b4c-8fa7-12fc3d407b1c:
      source:
        id: 40ec7ece-424b-4718-ab04-f346e6d7f659
      target:
        id: 7fe38410-f5f6-4252-8b42-9cad49362258
      z: 9
    a6e6de8a-1855-47f7-aaa9-531cf1226202:
      source:
        id: 5c76658f-4ded-4521-8ecb-9e861a2986a7
      target:
        id: b6fe529c-a907-4d4b-bc5a-7c2c0084ca4d
      z: 10
    a0387d3a-673c-4611-8fd8-5a9570a5776b:
      source:
        id: 5c76658f-4ded-4521-8ecb-9e861a2986a7
      target:
        id: 6810f928-0f73-4ba1-9d35-d37b5707a767
      z: 11
    c33c951e-038b-4311-bf79-7b225166e46a:
      source:
        id: 6810f928-0f73-4ba1-9d35-d37b5707a767
      target:
        id: d927e807-44dc-4671-bd51-148f385ffef1
      z: 12
    e3afdb64-175d-4e18-9552-fec544f33fef:
      source:
        id: 6810f928-0f73-4ba1-9d35-d37b5707a767
      target:
        id: 08e664f3-26a4-4c0e-a135-5864a00d0741
      z: 13
    ba4408ed-c20f-437b-b6bf-86e7454e0c09:
      source:
        id: 6810f928-0f73-4ba1-9d35-d37b5707a767
      target:
        id: 9d05a48b-4143-490d-afdf-809526ac15b5
      z: 14
    562c978e-f977-48d0-8ff7-c7eb5bb11620:
      source:
        id: 29ada4b5-4f54-44e3-a0b2-933f7bf04048
      target:
        id: 9d05a48b-4143-490d-afdf-809526ac15b5
      z: 1
    cf72e7e6-bccf-4795-a4d6-f4e55c4bfd67:
      source:
        id: 9d41dd85-de4c-4a8a-9ae4-3af5d1612e78
      target:
        id: 08e664f3-26a4-4c0e-a135-5864a00d0741
      z: 1
    6b636cbb-eaf4-45a9-80ea-10b9010cbb65:
      source:
        id: e6ab444a-8611-4966-8a93-568265fa4d15
      target:
        id: 9d05a48b-4143-490d-afdf-809526ac15b5
      z: 3
    631dcb92-1bb0-44e8-b38e-f5725810b2e6:
      source:
        id: e6ab444a-8611-4966-8a93-568265fa4d15
      target:
        id: 08e664f3-26a4-4c0e-a135-5864a00d0741
      z: 4
    a4baf8aa-8b8e-427c-83a1-f88256db1023:
      source:
        id: b6fe529c-a907-4d4b-bc5a-7c2c0084ca4d
      target:
        id: d927e807-44dc-4671-bd51-148f385ffef1
      z: 3
    b0a5abd0-c961-4c00-a8f8-e271a1a6f680:
      source:
        id: 6810f928-0f73-4ba1-9d35-d37b5707a767
        selector: 'g:nth-child(1) g:nth-child(4) g:nth-child(2) circle:nth-child(1)     '
        port: 'AWS::RefLink-AWS::EC2::Subnet-Subnets'
      target:
        id: 08e664f3-26a4-4c0e-a135-5864a00d0741
      z: 4
    5398e8ba-4fef-4875-8efa-b16acaad5e3a:
      source:
        id: 6810f928-0f73-4ba1-9d35-d37b5707a767
        selector: 'g:nth-child(1) g:nth-child(4) g:nth-child(2) circle:nth-child(1)     '
        port: 'AWS::RefLink-AWS::EC2::Subnet-Subnets'
      target:
        id: 9d05a48b-4143-490d-afdf-809526ac15b5
      z: 4
Resources:
  EIVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: WSO2EI-VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 16835601-a199-4d4a-85ba-b18e6cceaa39
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref EIVPC
      CidrBlock: 10.0.254.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: WSO2EI-Subnet1-Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9d05a48b-4143-490d-afdf-809526ac15b5
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref EIVPC
      CidrBlock: 10.0.252.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - '1'
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: WSO2EI-Subnet2-Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 08e664f3-26a4-4c0e-a135-5864a00d0741
  PublicRouteTableSN1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EIVPC
      Tags:
        - Key: Name
          Value: WSO2EI-Subnet1-RouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 29ada4b5-4f54-44e3-a0b2-933f7bf04048
  PublicRouteTableSN2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EIVPC
      Tags:
        - Key: Name
          Value: WSO2EI-Subnet2-RouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9d41dd85-de4c-4a8a-9ae4-3af5d1612e78
  PublicRouteSN1:
    Type: 'AWS::EC2::Route'
    Properties:
      GatewayId: !Ref EIInternetGateway
      RouteTableId: !Ref PublicRouteTableSN1
      DestinationCidrBlock: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6688ca28-56cf-40f5-ba16-209952337fe9
  PublicRouteSN2:
    Type: 'AWS::EC2::Route'
    Properties:
      GatewayId: !Ref EIInternetGateway
      RouteTableId: !Ref PublicRouteTableSN2
      DestinationCidrBlock: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: faba0cc1-95f2-4c0d-9085-d5a6c839f72c
  EIInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties: {}
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 092a4af4-51d8-4f86-a34f-b541da00cc2d
  EIVPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref EIInternetGateway
      VpcId: !Ref EIVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 22a8e504-0f78-4810-84b7-09389d5e06a2
  EICommonSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Common Security Group
      VpcId: !Ref EIVPC
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: '0'
          ToPort: '0'
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9443'
          ToPort: '9443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9763'
          ToPort: '9763'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8243'
          ToPort: '8243'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8280'
          ToPort: '8280'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: 0.0.0.0/0
        - IpProtocol: ICMP
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '10389'
          ToPort: '10389'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8000'
          ToPort: '8000'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5672'
          ToPort: '5672'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9611'
          ToPort: '9611'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9711'
          ToPort: '9711'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '10397'
          ToPort: '10397'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '7611'
          ToPort: '7611'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '7711'
          ToPort: '7711'
          CidrIp: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: d927e807-44dc-4671-bd51-148f385ffef1
  EIAutoscalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref EILaunchConfig
      VPCZoneIdentifier:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 1
      LoadBalancerNames:
        - !Ref EILoadBalancer
      Tags:
        - Key: Name
          Value: WSO2EI-Instance
          PropagateAtLaunch: 'true'
        - Key: Product
          Value: WSO2EI
          PropagateAtLaunch: 'true'
        - Key: Version
          Value: 6.1.1
          PropagateAtLaunch: 'true'
        - Key: Cluster
          Value: WSO2EI-Integrator
          PropagateAtLaunch: 'true'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5c76658f-4ded-4521-8ecb-9e861a2986a7
  EILaunchConfig:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      SecurityGroups:
        - !Ref EICommonSecurityGroup
      ImageId: ami-8fab8fea
      InstanceType: t2.medium
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      UserData: !Base64
        'Fn::Join':
          - |+

          - - '#!/bin/bash'
            - set -e
            - apt-get update
            - apt-get install unzip nfs-common -y
            - mkdir -p /mnt/efs
            - !Join
              - ''
              - - echo "
                - !Ref EIDepSyncMount
                - .efs.
                - !Ref 'AWS::Region'
                - .amazonaws.com
                - >-
                  :/ /mnt/efs nfs4
                  nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
                  0 0" >> /etc/fstab
            - mount -a -t nfs4
            - >-
              wget --tries=3 -q --no-check-certificate --no-cookies --header
              "Cookie: oraclelicense=accept-securebackup-cookie"
              http://download.oracle.com/otn-pub/java/jdk/8u131-b11/d54c1d3a095b4ff2b6607d096fa80163/jdk-8u131-linux-x64.tar.gz
              -P /tmp
            - tar zxvf /tmp/jdk-8u131-linux-x64.tar.gz -C /opt
            - ln -s /opt/jdk1.8.0_131/ /opt/java
            - export JAVA_HOME="/opt/java"
            - ''
            - >-
              wget --tries=3 --user-agent="testuser"
              --referer="http://connect.wso2.com/wso2/getform/reg/new_product_download"
              http://product-dist.wso2.com/products/enterprise-integrator/6.1.1/wso2ei-6.1.1.zip
              -P /tmp
            - unzip /tmp/wso2ei-6.1.1.zip -d /opt
            - >-
              wget --tries=3
              https://dev.mysql.com/get/Downloads/Connector-J/mysql-connector-java-5.1.41.zip
              -P /tmp
            - unzip /tmp/mysql-connector-java-5.1.41.zip -d /tmp
            - >-
              cp
              /tmp/mysql-connector-java-5.1.41/mysql-connector-java-5.1.41-bin.jar
              /opt/wso2ei-6.1.1/lib/
            - ''
            - >-
              public_ip=$(curl
              http://169.254.169.254/latest/meta-data/public-ipv4)
            - >-
              sed -i "/HostName>www.wso2.org/c\<HostName>$public_ip</HostName>"
              /opt/wso2ei-6.1.1/conf/carbon.xml
            - >-
              sed -i
              "/MgtHostName>mgt.wso2.org/c\<MgtHostName>$public_ip</MgtHostName>"
              /opt/wso2ei-6.1.1/conf/carbon.xml
            - !Join
              - ''
              - - sed -i "30 a\
                - <datasource>\n\
                - '    <name>WSO2UM_DB<\/name>\n\'
                - '    <description>The datasource used for User Management<\/description>\n\'
                - '    <jndiConfig>\n\'
                - '        <name>jdbc\/WSO2UM_DB<\/name>\n\'
                - '    <\/jndiConfig>\n\'
                - '    <definition type=\"RDBMS\">\n\'
                - '        <configuration>\n\'
                - '            <url>jdbc:mysql:\/\/'
                - !GetAtt
                  - EIDBInstance
                  - Endpoint.Address
                - ':3306\/WSO2EI_DB?autoReconnect=true<\/url>\n\'
                - '            <username>'
                - !Ref DBUsername
                - <\/username>\n\
                - '            <password>'
                - !Ref DBPassword
                - <\/password>\n\
                - '            <defaultAutoCommit>false<\/defaultAutoCommit>\n\'
                - '            <driverClassName>com.mysql.jdbc.Driver<\/driverClassName>\n\'
                - '            <maxActive>50<\/maxActive>\n\'
                - '            <maxWait>60000<\/maxWait>\n\'
                - '            <testOnBorrow>true<\/testOnBorrow>\n\'
                - '            <validationQuery>SELECT 1<\/validationQuery>\n\'
                - '            <validationInterval>30000<\/validationInterval>\n\'
                - '        <\/configuration>\n\'
                - '    <\/definition>\n\'
                - >-
                  <\/datasource>\n"
                  /opt/wso2ei-6.1.1/conf/datasources/master-datasources.xml
            - >-
              sed -i "30s/jdbc\/WSO2CarbonDB/jdbc\/WSO2UM_DB/g"
              /opt/wso2ei-6.1.1/conf/user-mgt.xml
            - !Join
              - ''
              - - sed -i "30 a\
                - <datasource>\n\
                - '    <name>WSO2REG_DB<\/name>\n\'
                - '    <description>The datasource used for Governance and Config Registry Spaces<\/description>\n\'
                - '    <jndiConfig>\n\'
                - '        <name>jdbc\/WSO2REG_DB<\/name>\n\'
                - '    <\/jndiConfig>\n\'
                - '    <definition type=\"RDBMS\">\n\'
                - '        <configuration>\n\'
                - '            <url>jdbc:mysql:\/\/'
                - !GetAtt
                  - EIDBInstance
                  - Endpoint.Address
                - ':3306\/WSO2EI_DB?autoReconnect=true<\/url>\n\'
                - '            <username>'
                - !Ref DBUsername
                - <\/username>\n\
                - '            <password>'
                - !Ref DBPassword
                - <\/password>\n\
                - '            <defaultAutoCommit>false<\/defaultAutoCommit>\n\'
                - '            <driverClassName>com.mysql.jdbc.Driver<\/driverClassName>\n\'
                - '            <maxActive>50<\/maxActive>\n\'
                - '            <maxWait>60000<\/maxWait>\n\'
                - '            <testOnBorrow>true<\/testOnBorrow>\n\'
                - '            <validationQuery>SELECT 1<\/validationQuery>\n\'
                - '            <validationInterval>30000<\/validationInterval>\n\'
                - '        <\/configuration>\n\'
                - '    <\/definition>\n\'
                - >-
                  <\/datasource>\n"
                  /opt/wso2ei-6.1.1/conf/datasources/master-datasources.xml
            - !Join
              - ''
              - - sed -i "32 a\
                - <dbConfig name=\"govregistry\">\n\
                - '    <dataSource>jdbc\/WSO2REG_DB<\/dataSource>\n\'
                - <\/dbConfig>\n\
                - '<remoteInstance url=\"https:\/\/publisher.apim-wso2.com\">\n\'
                - <id>gov<\/id>\n\
                - '<cacheId>user@jdbc:mysql:\/\/'
                - !GetAtt
                  - EIDBInstance
                  - Endpoint.Address
                - ':3306\/regdb<\/cacheId>\n\'
                - <dbConfig>govregistry<\/dbConfig>\n\
                - <readOnly>false<\/readOnly>\n\
                - <enableCache>true<\/enableCache>\n\
                - <registryRoot>\/<\/registryRoot>\n\
                - <\/remoteInstance>\n\
                - <mount path=\"\/_system\/governance\" overwrite=\"true\">\n\
                - <instanceId>gov<\/instanceId>\n\
                - <targetPath>\/_system\/governance<\/targetPath>\n\
                - <\/mount>\n\
                - <mount path=\"\/_system\/config\" overwrite=\"true\">\n\
                - <instanceId>gov<\/instanceId>\n\
                - <targetPath>\/_system\/config<\/targetPath>\n\
                - <\/mount>\n" /opt/wso2ei-6.1.1/conf/registry.xml
            - >-
              sed -i "420s/.*/<parameter
              name=\"HostnameVerifier\">AllowAll<\/parameter>/"
              /opt/wso2ei-6.1.1/conf/axis2/axis2.xml
            - ''
            - 'if [ ! -d "/mnt/efs/synapse-configs" ]; then'
            - '    mkdir -p /mnt/efs/synapse-configs'
            - '    cp -r /opt/wso2ei-6.1.1/repository/deployment/server/synapse-configs /mnt/efs/synapse-configs'
            - fi
            - >-
              rm -rf
              /opt/wso2ei-6.1.1/repository/deployment/server/synapse-configs
            - >-
              ln -s /mnt/efs/synapse-configs/synapse-configs
              /opt/wso2ei-6.1.1/repository/deployment/server/synapse-configs
            - ''
            - /opt/wso2ei-6.1.1/bin/integrator.sh -Dsetup start
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b6fe529c-a907-4d4b-bc5a-7c2c0084ca4d
  EILoadBalancer:
    Type: 'AWS::ElasticLoadBalancing::LoadBalancer'
    Properties:
      CrossZone: true
      SecurityGroups:
        - !Ref EICommonSecurityGroup
      Subnets:
        - !Ref PublicSubnet2
        - !Ref PublicSubnet1
      LBCookieStickinessPolicy:
        - PolicyName: LBStickyPolicy
      Listeners:
        - LoadBalancerPort: '9443'
          InstancePort: '9443'
          Protocol: HTTPS
          InstanceProtocol: HTTPS
          PolicyNames:
            - LBStickyPolicy
          SSLCertificateId: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
        - LoadBalancerPort: '8243'
          InstancePort: '8243'
          Protocol: HTTPS
          InstanceProtocol: HTTPS
          PolicyNames:
            - LBStickyPolicy
          SSLCertificateId: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
        - LoadBalancerPort: '9763'
          InstancePort: '9763'
          Protocol: HTTP
          InstanceProtocol: HTTP
          PolicyNames:
            - LBStickyPolicy
        - LoadBalancerPort: '10389'
          InstancePort: '10389'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '8000'
          InstancePort: '8000'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '5701'
          InstancePort: '5701'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '5672'
          InstancePort: '5672'
          Protocol: TCP
          InstanceProtocol: TCP
        - LoadBalancerPort: '10397'
          InstancePort: '10397'
          Protocol: TCP
          InstanceProtocol: TCP
      HealthCheck:
        Target: 'TCP:9763'
        HealthyThreshold: '3'
        UnhealthyThreshold: '5'
        Interval: '10'
        Timeout: '5'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6810f928-0f73-4ba1-9d35-d37b5707a767
  EIEFSMountTargetSN1:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref PublicSubnet1
      FileSystemId: !Ref EIDepSyncMount
      SecurityGroups:
        - !Ref EICommonSecurityGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 2050db38-51ea-4926-b987-acd90d83c453
  EIEFSMountTargetSN2:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref PublicSubnet2
      FileSystemId: !Ref EIDepSyncMount
      SecurityGroups:
        - !Ref EICommonSecurityGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 874e1463-a392-4a8a-a37b-eb625b12591b
  EIDepSyncMount:
    Type: 'AWS::EFS::FileSystem'
    Properties: {}
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f7941d35-f790-418d-bd23-f77e7f972c6d
  EIDBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: DB Subnet Group
      SubnetIds:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e6ab444a-8611-4966-8a93-568265fa4d15
  EIDBInstance:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      DBSubnetGroupName: !Ref EIDBSubnetGroup
      VPCSecurityGroups:
        - !Ref EICommonSecurityGroup
      DBInstanceClass: db.t2.medium
      AllocatedStorage: 5
      BackupRetentionPeriod: '0'
      DBInstanceIdentifier: wso2eidb
      DBName: WSO2EI_DB
      Engine: MySQL
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      MultiAZ: 'false'
      StorageType: gp2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 40ec7ece-424b-4718-ab04-f346e6d7f659
  RouteTableAssociationSN1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTableSN1
      SubnetId: !Ref PublicSubnet1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 562c978e-f977-48d0-8ff7-c7eb5bb11620
  RouteTableAssociationSN2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTableSN2
      SubnetId: !Ref PublicSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: cf72e7e6-bccf-4795-a4d6-f4e55c4bfd67
Parameters:
  KeyPairName:
    Description: >-
      The key pair to establish a SSH connection to the web servers. This should
      be already created.
    Type: 'AWS::EC2::KeyPair::KeyName'
  CertificateName:
    Description: A previously uploaded certificate to use at the Load Balancer Listeners.
    Type: String
    MinLength: 1
  DBUsername:
    Description: The username to be used in the WSO2 AM DB.
    Type: String
    Default: root
    MinLength: 4
    AllowedPattern: '[A-Za-z0-9\-]+'
  DBPassword:
    Description: The password to be used in the WSO2 AM DB.
    Type: String
    Default: rootrootroot
    MinLength: 8
    NoEcho: true
Outputs:
  ServerURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - EILoadBalancer
          - DNSName
        - ':9443/carbon'
    Description: WSO2 EI URL to be used to access the server.
    Export:
      Name: !Sub '${AWS::StackName}-ServerURL'
